--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -11,18 +11,63 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="box-group" id="accordion">
-                <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
+                    <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
                     <div class="panel box box-primary">
                         <div class="box-header with-border">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">
-                                Admin
+                                Eleve
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                            <div class="box-body">
-                                <form role="form" method="POST" action={{ path('utilisateur') }}>
+                            <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                                <div class="box-body">
+                                    <form role="form" method="POST" action={{ path('utilisateur') }}>
+                                    <!-- text input -->
+                                        <div class="form-group">
+                                            <label>Pseudo</label>
+                                            <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
+
+                                            <label>Mot de Passe</label>
+                                            <input type="password" id="password" name="password" class="form-control" placeholder="password">
+
+                                            <label>Nom</label>
+                                            <input type="text" name="nom" class="form-control" placeholder="Nom">
+
+                                            <label>Prénom</label>
+                                            <input type="text" name="prenom" class="form-control" placeholder="Prénom">
+
+                                            <label>E-mail</label>
+                                            <input type="text" name="email" class="form-control" placeholder="email">
+
+                                            <div class="form-group">
+                                                <label>Promotion</label>
+                                                <select class="form-control">
+                                                    <option>SIO 1</option>
+                                                    <option>SIO 2</option>
+                                                    <option>SIO PTFQ</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="box-footer">
+                                                <button type="submit" class="btn btn-primary">Enregistrer</button>
+                                        </div>
+
+                                    </form>
+                                </div>
+                            </div>
+                    </div>
+                <div class="panel box box-danger">
+                    <div class="box-header with-border">
+                        <h4 class="box-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
+                                Professeur
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                        <div class="box-body">
+                            <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
                                 <div class="form-group">
                                     <label>Pseudo</label>
@@ -40,87 +85,50 @@
                                     <label>E-mail</label>
                                     <input type="text" name="email" class="form-control" placeholder="email">
                                 </div>
-                        <div class="box-footer">
-                            <button type="submit" class="btn btn-primary">Enregistrer</button>
+                                <div class="box-footer">
+                                    <button type="submit" class="btn btn-primary">Enregistrer</button>
+                                </div>
+                            </form>
                         </div>
-
-                    </form>
-                </div>
-            </div>
+                    </div>
         </div>
-        <div class="panel box box-danger">
-            <div class="box-header with-border">
-                <h4 class="box-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
-                        Professeur
-                    </a>
-                </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                <div class="box-body">
-                    <form role="form" method="POST" action={{ path('utilisateur') }}>
-                        <!-- text input -->
-                        <div class="form-group">
-                            <label>Pseudo</label>
-                            <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
-
-                            <label>Mot de Passe</label>
-                            <input type="password" id="password" name="password" class="form-control" placeholder="password">
-
-                            <label>Nom</label>
-                            <input type="text" name="nom" class="form-control" placeholder="Nom">
-
-                            <label>Prénom</label>
-                            <input type="text" name="prenom" class="form-control" placeholder="Prénom">
-
-                            <label>E-mail</label>
-                            <input type="text" name="email" class="form-control" placeholder="email">
-                        </div>
-                        <div class="box-footer">
-                            <button type="submit" class="btn btn-primary">Enregistrer</button>
-                        </div>
-                    </form>
+            <div class="panel box box-success">
+                <div class="box-header with-border">
+                    <h4 class="box-title">
+                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="" aria-expanded="true">
+                        Admin
+                        </a>
+                    </h4>
                 </div>
-            </div>
-        </div>
-        <div class="panel box box-success">
-            <div class="box-header with-border">
-                <h4 class="box-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="" aria-expanded="true">
-                        Eleve
-                    </a>
-                </h4>
-            </div>
-            <div id="collapseThree" class="panel-collapse collapse in" aria-expanded="true">
-                        <div class="box-body">
-                            <div class="box box-warning">
+                <div id="collapseThree" class="panel-collapse collapse in" aria-expanded="true">
+                                <div class="box-body">
+
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
-                                            <!-- text input -->
-                                            <div class="form-group">
-                                                <label>Pseudo</label>
-                                                <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
+                                    <!-- text input -->
+                                        <div class="form-group">
+                                            <label>Pseudo</label>
+                                            <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
 
-                                                <label>Mot de Passe</label>
-                                                <input type="password" id="password" name="password" class="form-control" placeholder="password">
+                                            <label>Mot de Passe</label>
+                                            <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
-                                                <label>Nom</label>
-                                                <input type="text" name="nom" class="form-control" placeholder="Nom">
+                                            <label>Nom</label>
+                                            <input type="text" name="nom" class="form-control" placeholder="Nom">
 
-                                                <label>Prénom</label>
-                                                <input type="text" name="prenom" class="form-control" placeholder="Prénom">
+                                            <label>Prénom</label>
+                                            <input type="text" name="prenom" class="form-control" placeholder="Prénom">
 
-                                                <label>E-mail</label>
-                                                <input type="text" name="email" class="form-control" placeholder="email">
-                                            </div>
-                                            <div class="box-footer">
-                                                <button type="submit" class="btn btn-primary">Enregistrer</button>
-                                            </div>
+                                            <label>E-mail</label>
+                                            <input type="text" name="email" class="form-control" placeholder="email">
+                                        </div>
+                                        <div class="box-footer">
+                                            <button type="submit" class="btn btn-primary">Enregistrer</button>
+                                        </div>
                                     </form>
                                 </div><!-- box -->
-                            </div><!-- -->
-                        </div><!-- -->
-                    </div><!-- panel.box -->
-                </div><!-- accordion.box -->
+                            </div><!-- CollapseThree -->
+                        </div><!-- panel.box -->
+                    </div><!-- accordion -->
             </div><!-- col -->
         </div><!-- row -->
     </section>
