--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -38,7 +38,7 @@
                                             <input type="text" name="prenom" class="form-control" placeholder="Prénom">
 
                                             <label>E-mail</label>
-                                            <input type="text" name="email" class="form-control" placeholder="email">
+                                            <input type="text" name="email" class="form-control" placeholder="email@exemple.com">
 
                                             <div class="form-group">
                                                 <label>Promotion</label>
@@ -83,7 +83,7 @@
                                     <input type="text" name="prenom" class="form-control" placeholder="Prénom">
 
                                     <label>E-mail</label>
-                                    <input type="text" name="email" class="form-control" placeholder="email">
+                                    <input type="text" name="email" class="form-control" placeholder="exemple@email.com">
                                 </div>
                                 <div class="box-footer">
                                     <button type="submit" class="btn btn-primary">Enregistrer</button>
@@ -119,7 +119,7 @@
                                             <input type="text" name="prenom" class="form-control" placeholder="Prénom">
 
                                             <label>E-mail</label>
-                                            <input type="text" name="email" class="form-control" placeholder="email">
+                                            <input type="text" name="email" class="form-control" placeholder="exemple@email.com">
                                         </div>
                                         <div class="box-footer">
                                             <button type="submit" class="btn btn-primary">Enregistrer</button>
