--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -103,7 +103,7 @@
               </a>
             </li>
             <!-- Ajouter des membres -->
-            <li>
+            <li class="treeview">
               <a href="utilisateur/new">
                 <i class="fa fa-user-secret"></i><span>Administration</span>
               </a>
