--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -214,6 +214,7 @@
                               <h3 class="box-title">Activités Recentes</h3>
                           </div>
                           <div class="tab-content">
+                              <div class="box-body">
                               <div class="active tab-pane" id="activity">
                                   <!-- Post -->
                                   <div class="post">
@@ -244,11 +245,10 @@
 
                                       <input class="form-control input-sm" type="text" placeholder="Type a comment">
                                   </div>
+
                                   <!-- /.post -->
-                                  <li>
-                                      <i class="fa fa-clock-o bg-gray"></i>
-                                  </li>
                                   </ul>
+                              </div>
                               </div>
                               <!-- /.tab-pane -->
                           </div>
