--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -211,7 +211,7 @@
                   <div class="col-md-6">
                       <div class="box box-info" style="position: relative;">
                           <div class="box-header ui-sortable-handle">
-                              <h3 class="box-title">Activités Recentes</h3>
+                              <i class="fa fa-calendar"></i><h3 class="box-title">Activités Recentes</h3>
                           </div>
                           <div class="tab-content">
                               <div class="box-body">
