--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -222,7 +222,7 @@
                                           <img class="img-circle img-bordered-sm" src="../../dist/img/user1-128x128.jpg" alt="user image">
                         <span class="username">
                           <a href="#">Jonathan Burke Jr.</a>
-                          <a href="#" class="pull-right btn-box-tool"><i class="fa fa-times"></i></a>
+                          <a href="#" class="pull-right btn-box-tool"></a>
                         </span>
                                           <span class="description">Shared publicly - 7:30 PM today</span>
                                       </div>
