--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -31,7 +31,7 @@
                       <input type="text" id="description" name="description" class="form-control" placeholder="Description">
 
                       <div class="form-group">
-                          <label>Competence(s) Associé(e)(s)</label>
+                          <label>Competence(s) Associé(s)</label>
                             <select class="form-control">
 
                                 {% for competence in competences %}
