--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -21,9 +21,10 @@
                       <label>Date de Debut</label>
                       <input type="date"  id="debut" name="debut" class="form-control" placeholder="jj / mm / aa">
                       
-                      <label>Duree</label>
-                      <input type="text"  id="duree" name="duree" class="form-control" placeholder="jours/semaines/mois/années">
-                      
+                      <label style=" margin: 5px;">Duree</label>
+                      <input type="text"  id="duree" name="duree" class="form-control" placeholder=" j/s/m/a">
+
+                      <br />
                       <label>Libelle</label>
                       <input type="text"  id="libelle" name="libelle" class="form-control" placeholder="libelle">
                         
