--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -71,7 +71,10 @@
                         <form action="#" method="post">
                             <!-- Destinataire -->
                             <div class="form-group">
-                                <input type="email" class="form-control" name="emailto" placeholder="Envoyé à :">
+                                <select>
+                                    {% for professeur in professeurs %}
+                                        <option value="{{ professeur.getMail }}">{{ professeur.getNom - professeur.getPrenom }}</option>
+                                    {% endfor %}
                             </div>
                             <!-- Objet -->
                             <div class="form-group">
