--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -40,6 +40,10 @@
                                  {{  competence.getReference() }}
                               {%  endfor %}
                             </th>
+                            <th><div class="btn-group">
+                                <button type="button" class="btn btn-warning btn-flat"><i class="fa fa-eraser"></i></button>
+                              </div></th>
+                            <th><div class="btn-group"><button type="button" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button></div></th>
                           </tr>
                         {% endfor %}
                     </tbody>
@@ -51,6 +55,8 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
+                        <th>Modifier</th>
+                        <th>Supprimer</th>
                       </tr>
                     </tfoot>
                   </table>
