--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -22,7 +22,7 @@
                         </div>
                             <div id="collapseOne" class="panel-collapse collapse" aria-expanded="true" style="height: 0px;">
                                 <div class="box-body">
-                                    <form role="form" method="POST" action={{ path('utilisateur') }}>
+                                    <form role="form" method="POST" action={{ path('eleves') }}>
                                     <!-- text input -->
                                         <div class="form-group">
                                             <label>Pseudo</label>
@@ -69,7 +69,7 @@
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                         <div class="box-body">
-                            <form role="form" method="POST" action={{ path('utilisateur') }}>
+                            <form role="form" method="POST" action={{ path('professeur') }}>
                                 <!-- text input -->
                                 <div class="form-group">
                                     <label>Pseudo</label>
@@ -105,7 +105,7 @@
                 <div id="collapseThree" class="panel-collapse collapse in" aria-expanded="false">
                                 <div class="box-body">
 
-                                    <form role="form" method="POST" action={{ path('utilisateur') }}>
+                                    <form role="form" method="POST" action={{ path('accueil') }}>
                                     <!-- text input -->
                                         <div class="form-group">
                                             <label>Pseudo</label>
