Activite & Ajout-Utilisateur

--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -26,6 +26,8 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
+                        <th>Modifier</th>
+                        <th>Supprimer</th>
                       </tr>
                     </thead>
                     <tbody>
