Activite & Ajout-Utilisateur

--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -57,7 +57,7 @@
                         <th>Reference</th>
                         <th>Libelle</th>
                         <th>Description</th>
-                        <th>Obligatoire</th>
+                        <th style="width:30px;">Obligatoire</th>
                     </tr>
                 </tfoot>
             </table>
