Activite & Ajout-Utilisateur

--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -43,7 +43,7 @@
                         {% else %}
                             <th>   </th>
                         {% endif %}
-                        <th style="width:30px;" >
+                        <th style="width:30px; text-align:center;" >
                             <div class="btn-group">
                                 <button type="button" class="btn btn-warning btn-flat"><i class="fa fa-eraser"></i></button>
                             </div>
