Activite & Ajout-Utilisateur

--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -45,8 +45,8 @@
                         {% endif %}
                         <th style="width:50px; text-align:center;" >
                             <div class="btn-group">
-                                <button type="button" class="btn btn-warning btn-flat"><i class="fa fa-eraser"></i></button>
-                                <button type="button" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
+                                <button type="button" title="Modifier" class="btn btn-warning btn-flat"><i class="fa fa-eraser"></i></button>
+                                <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
                             </div>
                         </th>
                     </tr>
