--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -45,7 +45,7 @@
                         {% endif %}
                         <th style="width:60px; text-align:center;" >
                             <div class="btn-group">
-                                <button type="button" title="Modifier" class="btn btn-warning btn-flat"><i class="fa fa-eraser"></i></button>
+                                <button type="button" title="Modifier" class="btn btn-warning btn-flat"><i class="fa fa-eraser" style="width:10px;"></i></button>
                                 <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
                             </div>
                         </th>
