--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -29,7 +29,7 @@
                  <!-- Competences "%" -->
                  <div class="small-box bg-red">
                      <div class="inner">
-                         <h3>{{  }}/{{ competences|length }}<sup style="font-size: 20px">%</sup></h3>
+                         <h3>/{{ competences|length }}<sup style="font-size: 20px">%</sup></h3>
                          <p>Competences acquises</p>
                      </div>
                      <div class="icon">
