--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -42,10 +42,12 @@
                                  {{  competence.getReference() }}
                               {%  endfor %}
                             </th>
-                            <th><div class="btn-group">
-                                <button type="button" class="btn btn-warning btn-flat"><i class="fa fa-eraser"></i></button>
-                              </div></th>
-                            <th><div class="btn-group"><button type="button" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button></div></th>
+                            <th style="width:60px; text-align:center;" >
+                              <div class="btn-group">
+                                <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-eraser" style="width:10px;"></i></button>
+                                <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
+                              </div>
+                            </th>
                           </tr>
                         {% endfor %}
                     </tbody>
