--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -26,8 +26,7 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
-                        <th>Modifier</th>
-                        <th>Supprimer</th>
+                        <th>Action</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -59,8 +58,7 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
-                        <th>Modifier</th>
-                        <th>Supprimer</th>
+                        <th>Action</th>
                       </tr>
                     </tfoot>
                   </table>
