--- a/vues/professeurs.html.twig
+++ b/vues/professeurs.html.twig
@@ -24,7 +24,7 @@
                         <th>Nom</th>
                         <th>Prenom</th>
                         <th>Email</th>
-                        <th>Action</th>
+                        <th style="width:60px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
