--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -24,7 +24,7 @@
                         <th>Annee</th>
                         <th>Libelle</th>
                         <th>Nb d'eleves</th>
-                        <th>Action</th>
+                        <th style="width:60px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
