--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -26,7 +26,7 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
-                        <th>Action</th>
+                        <th style="width:60px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
