--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -26,7 +26,7 @@
                         <th>Email</th>
                         <th>Promotion</th>
                         <th>Annee</th>
-                        <th>Action</th>
+                        <th style="width:60px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
