--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -151,11 +151,7 @@
                                       </div>
                                       <!-- /.user-block -->
                                       <p>
-                                          Lorem ipsum represents a long-held tradition for designers,
-                                          typographers and the like. Some people hate it and argue for
-                                          its demise, but others ignore the hate as they create awesome
-                                          tools to help create filler text for everyone from bacon lovers
-                                          to Charlie Sheen fans.
+                                          test
                                       </p>
                                       <ul class="list-inline">
                                           <li><a href="#" class="link-black text-sm"><i class="fa fa-share margin-r-5"></i> Share</a></li>
