--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -32,13 +32,13 @@
                                             <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
                                             <label>Nom</label>
-                                            <input type="text" name="nom" class="form-control" placeholder="Nom">
+                                            <input type="text" id="nom" name="nom" class="form-control" placeholder="Nom">
 
                                             <label>Prénom</label>
-                                            <input type="text" name="prenom" class="form-control" placeholder="Prénom">
+                                            <input type="text" id="prenom" name="prenom" class="form-control" placeholder="Prénom">
 
                                             <label>E-mail</label>
-                                            <input type="text" name="email" class="form-control" placeholder="email@exemple.com">
+                                            <input type="text" id="email" name="email" class="form-control" placeholder="exemple@email.com">
 
                                             <div class="form-group">
                                                 <label>Promotion</label>
@@ -79,13 +79,13 @@
                                     <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
                                     <label>Nom</label>
-                                    <input type="text" name="nom" class="form-control" placeholder="Nom">
+                                    <input type="text" id="nom" name="nom" class="form-control" placeholder="Nom">
 
                                     <label>Prénom</label>
-                                    <input type="text" name="prenom" class="form-control" placeholder="Prénom">
+                                    <input type="text" id="prenom" name="prenom" class="form-control" placeholder="Prénom">
 
                                     <label>E-mail</label>
-                                    <input type="text" name="email" class="form-control" placeholder="exemple@email.com">
+                                    <input type="text" id="email" name="email" class="form-control" placeholder="exemple@email.com">
                                 </div>
                                 <div class="box-footer">
                                     <button type="submit" class="btn btn-primary">Enregistrer</button>
@@ -115,13 +115,13 @@
                                             <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
                                             <label>Nom</label>
-                                            <input type="text" name="nom" class="form-control" placeholder="Nom">
+                                            <input type="text" id="nom" name="nom" class="form-control" placeholder="Nom">
 
                                             <label>Prénom</label>
-                                            <input type="text" name="prenom" class="form-control" placeholder="Prénom">
+                                            <input type="text" id="prenom" name="prenom" class="form-control" placeholder="Prénom">
 
                                             <label>E-mail</label>
-                                            <input type="text" name="email" class="form-control" placeholder="exemple@email.com">
+                                            <input type="text" id="email" name="email" class="form-control" placeholder="exemple@email.com">
                                         </div>
                                         <div class="box-footer">
                                             <button type="submit" class="btn btn-primary">Enregistrer</button>
