--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -79,7 +79,7 @@
                             </div>
                             <!-- Objet -->
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" placeholder="Subject">
+                                <input type="text" class="form-control" name="subject" placeholder="Sujet">
                             </div>
                             <!-- Editeur de texte -->
                             <div>
@@ -128,52 +128,6 @@
                             <i class="fa fa-arrow-circle-right"></i></button>
                     </div>
                 </div><!-- /div Email -->
-                  </div>
-
-                  <!-- Recent Activities  -->
-                  <div class="col-md-6">
-                      <div class="box box-info" style="position: relative;">
-                          <div class="box-header ui-sortable-handle">
-                              <i class="fa fa-calendar"></i><h3 class="box-title">Activités Recentes</h3>
-                          </div>
-                          <div class="tab-content">
-                              <div class="box-body">
-                              <div class="active tab-pane" id="activity">
-                                  <!-- Post -->
-                                  <div class="post">
-                                      <div class="user-block">
-                                          <img class="img-circle img-bordered-sm" src="../../dist/img/user1-128x128.jpg" alt="user image">
-                        <span class="username">
-                          <a href="#">Jonathan Burke Jr.</a>
-                          <a href="#" class="pull-right btn-box-tool"></a>
-                        </span>
-                                          <span class="description">Shared publicly - 7:30 PM today</span>
-                                      </div>
-                                      <!-- /.user-block -->
-                                      <p>
-                                          test
-                                      </p>
-                                      <ul class="list-inline">
-                                          <li><a href="#" class="link-black text-sm"><i class="fa fa-share margin-r-5"></i> Share</a></li>
-                                          <li><a href="#" class="link-black text-sm"><i class="fa fa-thumbs-o-up margin-r-5"></i> Like</a>
-                                          </li>
-                                          <li class="pull-right">
-                                              <a href="#" class="link-black text-sm"><i class="fa fa-comments-o margin-r-5"></i> Comments
-                                                  (5)</a></li>
-                                      </ul>
-
-                                      <input class="form-control input-sm" type="text" placeholder="Type a comment">
-                                  </div>
-
-                                  <!-- /.post -->
-                                  </ul>
-                              </div>
-                              </div>
-                              <!-- /.tab-pane -->
-                          </div>
-                          <!-- /.tab-content -->
-                      </div>
-                      <!-- /.nav-tabs-custom -->
                   </div>
           </div>
 
