--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -91,6 +91,16 @@
               </a>
             </li>
             <!--  Affiche Eleve (Prof)  -->
+
+            <!-- Ajouter des membres -->
+            <li class="treeview">
+                <i class="fa fa-user-secret"></i><span>Administration</span>
+
+            <li class="treeview">
+              <a href="utilisateur/new">
+                <i class="fa fa-user"></i> <span>Ajouter</span>
+              </a>
+            </li>
             <li class="treeview">
               <a href="{{ path('eleve') }}">
                 <i class="fa fa-user"></i> <span>Élèves</span>
@@ -102,11 +112,7 @@
                 <i class="fa fa-user"></i> <span>Professeurs</span>
               </a>
             </li>
-            <!-- Ajouter des membres -->
-            <li class="treeview">
-              <a href="utilisateur/new">
-                <i class="fa fa-user-secret"></i><span>Administration</span>
-              </a>
+
             </li>
           </ul>
         </section>
