--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -96,7 +96,7 @@
               <li class="treeview">
                   <a href=""><i class="fa fa-user-secret"></i><span>Administration</span> <i class="fa fa-angle-left pull-right"></i></a>
                   <ul class="treeview-menu">
-                      <li><a href="utilisateur/new"><i class="glyphicon glyphicon-th-list"></i>Ajouter</a></li>
+                      <li><a href="utilisateur/new"><i class="fa fa-plus"></i>Ajouter</a></li>
                       <li><a href=" {{ path ('eleve') }} "><i class="fa fa-group"></i>Eleves</a></li>
                       <li><a href=" {{ path ('professeur') }} "><i class="fa fa-user"></i>Professeurs</a></li>
                   </ul>
