--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -71,6 +71,11 @@
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="header">MENU</li>
+              <li class="treeview">
+                  <a href="/">
+                      <i class="fa fa-home"></i> <span>Accueil</span></i>
+                  </a>
+              </li>
             <li class="treeview">
               <a href="{{ path('activite') }}">
                 <i class="fa fa-wrench"></i> <span>Activités</span></i>
