--- a/vues/login.html.twig
+++ b/vues/login.html.twig
@@ -35,11 +35,11 @@
         <p class="login-box-msg">Veuillez vous connecter</p>
         <form action="{{ path('login_check') }}" method="post">
           <div class="form-group has-feedback">
-            <input type="text" class="form-control" value="{{ last_username }}" placeholder="Username" name="username">
+            <input type="text" class="form-control" value="{{ last_username }}" placeholder="Username" name="_username">
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Mot de passe" name="pass">
+            <input type="password" class="form-control" placeholder="Mot de passe" name="_password">
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           {% if error %}
