--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -5,8 +5,9 @@
 
     <h1>
         Compétences
-        <small>liste</small><a href="competence/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
-        <a href="" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">EXPORT PDF</span>
+        <small>liste</small>
+        <a href="competence/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
+        <a href="" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">PDF</span>
     </h1>
 </section>
     <section class="content">
