--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -7,8 +7,8 @@
         Compétences
         <small>liste</small>
         <a href="competence/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
-        <a href="" type="button" style="float:right;margin:-2px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">down PDF</span></a>
-        <a href="" type="button" style="float:right;margin:-2px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">down HTML</span></a>
+        <a href="" type="button" style="float:right;margin:-2px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-file-pdf-o"></i><span style="margin:3px;">down PDF</span></a>
+        <a href="" type="button" style="float:right;margin:-2px;margin-left:10px" class="btn bg-orange btn-flat margin"><i class="fa fa-clone"></i><span style="margin:3px;">down HTML</span></a>
     </h1>
 </section>
     <section class="content">
