--- a/vues/SwiftMailer.html.twig
+++ b/vues/SwiftMailer.html.twig
@@ -9,9 +9,9 @@
             <div class="row">
                 <div class="form-group">
                     <select class="form-control">
-                        {% for professeur in professeurs %}
+                      {#  {% for professeur in professeurs %}
                             <option value="{{ professeur.getMail }}">{{ professeur.getNom - professeur.getPrenom }}</option>
-                        {% endfor %}
+                        {% endfor %} #}
                     </select>
                 </div>
                 <div class="form-group">
