--- a/vues/SwiftMailer.html.twig
+++ b/vues/SwiftMailer.html.twig
@@ -60,7 +60,7 @@
                 </form>
             </div>
             <div class="box-footer clearfix">
-                <button type="button" class="pull-right btn btn-default" id="sendEmail">Envoyer {{ form_widget }}
+                <button type="button" class="pull-right btn btn-default" id="sendEmail">Envoyer
                     <i class="fa fa-arrow-circle-right"></i></button>
             </div>
 
