--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -38,6 +38,7 @@
                                   <div class="btn-group">
                                       <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
                                       <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
+                                      <button type="button" title="Voir" class="btn btn-warning btn-flat" style="margin-right:5px;"><a href="/promotion/{{ promotion.getId() }}"><i class="fa fa-eye" style="width:10px;"></i></button>
                                   </div>
                             </th>
                           </tr>
