--- a/vues/voir_promotion.html.twig
+++ b/vues/voir_promotion.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Promotions
-        <small>ajout</small><a href="promotion/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
+        <small>Voir</small>
     </h1>
         </section>
 
@@ -14,31 +14,29 @@
             <div class="col-xs-12">
               <div class="box box-warning">
                 <div class="box-header">
-                  <h3 class="box-title">Voici les différentes Promotions</h3>
+                    <h3 class="box-title">Liste des eleves dans la promotion : <bold>{{ promotion.getLibelle() }}</bold></h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
                   <table id="example1" class="table table-bordered table-striped">
                     <thead>
                       <tr>
                         <th>Numero</th>
-                        <th>Annee</th>
-                        <th>Libelle</th>
-                        <th>Nb d'eleves</th>
+                        <th>Nom</th>
+                        <th>Prenom</th>
+                        <th>Username</th>
                         <th style="width:60px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
-                        {% for promotion in promotions %}
+                        {% for eleve in promotion.getEleves() %}
                           <tr>
-                            <th>{{ promotion.getId() }}</th>
-                            <th>{{ promotion.getAnnee() }}</th>
-                            <th>{{ promotion.getLibelle() }}</th>
-                            <th>{{ promotion.getEleves|length }}</th>
-                            <th style="width:90px; text-align:center;" >
+                            <th>{{ eleve.getId() }}</th>
+                            <th>{{ eleve.getNom() }}</th>
+                            <th>{{ eleve.getPrenom() }}</th>
+                            <th>{{ eleve.getUsername() }}</th>
+                            <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
-                                      <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
-                                      <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
-                                      <button type="button" title="Voir" class="btn btn-warning btn-flat" style="margin-top:5px;margin-left:1px;"><a href="/promotion/{{ promotion.getId() }}"></a><i class="fa fa-eye" style="width:10px;"></i></button>
+                                      <button type="button" title="Voir" class="btn btn-warning btn-flat" style="margin-top:5px;margin-left:1px;"><a href="/activite/{{ eleve.getId() }}"></a><i class="fa fa-eye" style="width:10px;"></i></button>
                                   </div>
                             </th>
                           </tr>
