--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -24,7 +24,7 @@
                         <th>Annee</th>
                         <th>Libelle</th>
                         <th>Nb d'eleves</th>
-                        <th style="width:60px;">Action</th>
+                        <th style="width:80px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -38,7 +38,7 @@
                                   <div class="btn-group">
                                       <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
                                       <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
-                                      <a href="promotion/1" type="button" style="margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-eye"></i><span style="margin:3px;">Voir</span></a>
+                                      <a href="promotion/1" title="Voir" type="button" style="margin:-2px" class="btn btn-info btn-flat"><i class="fa fa-eye"></i><span style="margin:3px;"></span></a>
                                   </div>
                             </th>
                           </tr>
