--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -24,7 +24,7 @@
                         <th>Annee</th>
                         <th>Libelle</th>
                         <th>Nb d'eleves</th>
-                        <th style="width:80px;">Action</th>
+                        <th style="width:95px;">Action</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -37,8 +37,8 @@
                             <th style="width:90px; text-align:center;" >
                                   <div class="btn-group">
                                       <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
-                                      <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
-                                      <a href="promotion/1" title="Voir" type="button" style="margin:-2px" class="btn btn-info btn-flat"><i class="fa fa-eye"></i><span style="margin:3px;"></span></a>
+                                      <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"style="margin-right:5px;"><i class="fa fa-times" style="width:10px;"></i></button>
+                                      <a href="promotion/1" title="Voir" type="button" style="margin:-2px" class="btn btn-info btn-flat"><i class="fa fa-eye"></i></a>
                                   </div>
                             </th>
                           </tr>
